--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Welcome</string>
     <string name="welcome">Welcome to Android App Development</string>
+    <string name="deitel_logo">Deitel double-thumbs-up bug logo</string>
+    <string name="text_view_voice">Text view element</string>
 </resources>
